package Exoesqueleto;

public interface ITecnicoEspaniol {
    public void aprender();
}
