package Exoesqueleto;

public interface ITecnicoIngles {
    public void aprender();

}
