package Exoesqueleto;

public class Laser {
    
    public Boolean disparar(int tiempo) {
        if (tiempo > 0) {
            return true;
        }
        return false;
    }
}
