package Exoesqueleto;

public class TurboReactor {

    public void volar(Integer nivelEnergia) {
        System.out.println("Iniciar el vuelo...");
    }
}
